Fixed css issues with dark/contrast modes

--- a/src/components/GanttChart/AddTaskButton.css
+++ b/src/components/GanttChart/AddTaskButton.css
@@ -61,16 +61,18 @@
 
   .add-task-modal {
     position: fixed;
-    width: 100%; 
-    left: 35%;
+    left: 33%;
     overflow-y: none; 
   }  
 
+  .modal-title{
+    margin-left: 200px;
+  }
   .modal-content{
     text-align: left;
     max-width: 600px;
     max-height: 600px;
-    width: 100%;  
+    width: 150%;  
     overflow-x:hidden;
   }
   
@@ -140,10 +142,6 @@
     margin-left: 10px;
 }
 
-<<<<<<< HEAD
-=======
-
->>>>>>> 161eb3b708efc482a51a13d2142637650704f341
 .submit-btn{
   width: 300px;
 }
@@ -158,13 +156,9 @@
 @media (max-width: 768px) {
   .modal-content {
       width: 95vw; 
-      transform: translateX(-35%);
+      transform: translateX(-33.5%);
   }
 }
-<<<<<<< HEAD
-=======
-
->>>>>>> 161eb3b708efc482a51a13d2142637650704f341
 .checkBoxAddBtn{
     width: 17.6px !important;
 }
@@ -175,9 +169,10 @@
     border-radius: 0% !important;
     border-width: 0px !important;
     padding: 0px !important;
-<<<<<<< HEAD
-}
-=======
 }
 
->>>>>>> 161eb3b708efc482a51a13d2142637650704f341
+.submit-btn{
+  margin-left: 150px !important;
+  width: 200px;
+  transition: ease-in 0.3s;
+}
